bear-codegen/tests/snapshots/snapshots__snapshot_flags_cray_fortran.snap
---
source: bear-codegen/tests/snapshots.rs
expression: "generate_flag_file(\"cray_fortran\")"
---
// Generated from compilers/cray_fortran.yaml -- DO NOT EDIT
static CRAY_FORTRAN_FLAGS: [FlagRule; 65] = [
    FlagRule::new(FlagPattern::Exactly("--no-custom-ld-script", 0), ArgumentKind::Other(PassEffect::Configures(CompilerPass::Linking))),
    FlagRule::new(FlagPattern::Exactly("-no-add-rpath-shared", 0), ArgumentKind::Other(PassEffect::Configures(CompilerPass::Linking))),
    FlagRule::new(FlagPattern::ExactlyWithGluedOrSep("--custom-ld-script="), ArgumentKind::Other(PassEffect::Configures(CompilerPass::Linking))),
    FlagRule::new(FlagPattern::Exactly("-add-rpath-shared", 0), ArgumentKind::Other(PassEffect::Configures(CompilerPass::Linking))),
    FlagRule::new(FlagPattern::ExactlyWithGluedOrSep("-target-network="), ArgumentKind::Other(PassEffect::None)),
    FlagRule::new(FlagPattern::Exactly("-no-add-runpath", 0), ArgumentKind::Other(PassEffect::Configures(CompilerPass::Linking))),
    FlagRule::new(FlagPattern::Exactly("--no-as-needed", 0), ArgumentKind::Other(PassEffect::Configures(CompilerPass::Linking))),
    FlagRule::new(FlagPattern::ExactlyWithGluedOrSep("-target-accel="), ArgumentKind::Other(PassEffect::None)),
    FlagRule::new(FlagPattern::Exactly("-no-gcc-rpath", 0), ArgumentKind::Other(PassEffect::Configures(CompilerPass::Linking))),
    FlagRule::new(FlagPattern::Exactly("-no-add-rpath", 0), ArgumentKind::Other(PassEffect::Configures(CompilerPass::Linking))),
    FlagRule::new(FlagPattern::Exactly("-no-as-needed", 0), ArgumentKind::Other(PassEffect::Configures(CompilerPass::Linking))),
    FlagRule::new(FlagPattern::Exactly("-add-runpath", 0), ArgumentKind::Other(PassEffect::Configures(CompilerPass::Linking))),
    FlagRule::new(FlagPattern::ExactlyWithGluedOrSep("-target-cpu="), ArgumentKind::Other(PassEffect::None)),
    FlagRule::new(FlagPattern::Exactly("--as-needed", 0), ArgumentKind::Other(PassEffect::Configures(CompilerPass::Linking))),
    FlagRule::new(FlagPattern::Exactly("-qno-openmp", 0), ArgumentKind::Other(PassEffect::None)),
    FlagRule::new(FlagPattern::Exactly("-gcc-rpath", 0), ArgumentKind::Other(PassEffect::Configures(CompilerPass::Linking))),
    FlagRule::new(FlagPattern::Exactly("-add-rpath", 0), ArgumentKind::Other(PassEffect::Configures(CompilerPass::Linking))),
    FlagRule::new(FlagPattern::Exactly("-as-needed", 0), ArgumentKind::Other(PassEffect::Configures(CompilerPass::Linking))),
    FlagRule::new(FlagPattern::Exactly("-Mnoopenmp", 0), ArgumentKind::Other(PassEffect::None)),
    FlagRule::new(FlagPattern::Exactly("-default64", 0), ArgumentKind::Other(PassEffect::None)),
    FlagRule::new(FlagPattern::Exactly("-noopenmp", 0), ArgumentKind::Other(PassEffect::None)),
    FlagRule::new(FlagPattern::Exactly("-dynamic", 0), ArgumentKind::Other(PassEffect::Configures(CompilerPass::Linking))),
    FlagRule::new(FlagPattern::Exactly("-openmp", 0), ArgumentKind::Other(PassEffect::None)),
    FlagRule::new(FlagPattern::Exactly("-shared", 0), ArgumentKind::Other(PassEffect::Configures(CompilerPass::Linking))),
    FlagRule::new(FlagPattern::Exactly("-static", 0), ArgumentKind::Other(PassEffect::Configures(CompilerPass::Linking))),
    FlagRule::new(FlagPattern::Prefix("--cray", 0), ArgumentKind::Other(PassEffect::None)),
    FlagRule::new(FlagPattern::Prefix("-cray", 0), ArgumentKind::Other(PassEffect::None)),
    FlagRule::new(FlagPattern::Exactly("-VVV", 0), ArgumentKind::Other(PassEffect::DriverOption)),
    FlagRule::new(FlagPattern::Exactly("-mp", 0), ArgumentKind::Other(PassEffect::None)),
    FlagRule::new(FlagPattern::Exactly("-VV", 0), ArgumentKind::Other(PassEffect::DriverOption)),
    FlagRule::new(FlagPattern::ExactlyWithGluedOrSep("-A"), ArgumentKind::Other(PassEffect::None)),
    FlagRule::new(FlagPattern::ExactlyWithGluedOrSep("-b"), ArgumentKind::Output),
    FlagRule::new(FlagPattern::ExactlyWithGluedOrSep("-D"), ArgumentKind::Other(PassEffect::Configures(CompilerPass::Preprocessing))),
    FlagRule::new(FlagPattern::ExactlyWithGluedOrSep("-d"), ArgumentKind::Other(PassEffect::None)),
    FlagRule::new(FlagPattern::ExactlyWithGluedOrSep("-e"), ArgumentKind::Other(PassEffect::None)),
    FlagRule::new(FlagPattern::ExactlyWithGluedOrSep("-f"), ArgumentKind::Other(PassEffect::None)),
    FlagRule::new(FlagPattern::ExactlyWithGluedOrSep("-G"), ArgumentKind::Other(PassEffect::None)),
    FlagRule::new(FlagPattern::ExactlyWithGluedOrSep("-h"), ArgumentKind::Other(PassEffect::None)),
    FlagRule::new(FlagPattern::ExactlyWithGluedOrSep("-I"), ArgumentKind::Other(PassEffect::Configures(CompilerPass::Preprocessing))),
    FlagRule::new(FlagPattern::ExactlyWithGluedOrSep("-J"), ArgumentKind::Other(PassEffect::Configures(CompilerPass::Preprocessing))),
    FlagRule::new(FlagPattern::ExactlyWithGluedOrSep("-K"), ArgumentKind::Other(PassEffect::None)),
    FlagRule::new(FlagPattern::ExactlyWithGluedOrSep("-l"), ArgumentKind::Other(PassEffect::Configures(CompilerPass::Linking))),
    FlagRule::new(FlagPattern::ExactlyWithGluedOrSep("-L"), ArgumentKind::Other(PassEffect::Configures(CompilerPass::Linking))),
    FlagRule::new(FlagPattern::ExactlyWithGluedOrSep("-m"), ArgumentKind::Other(PassEffect::None)),
    FlagRule::new(FlagPattern::ExactlyWithGluedOrSep("-M"), ArgumentKind::Other(PassEffect::None)),
    FlagRule::new(FlagPattern::ExactlyWithGluedOrSep("-N"), ArgumentKind::Other(PassEffect::None)),
    FlagRule::new(FlagPattern::ExactlyWithGluedOrSep("-O"), ArgumentKind::Other(PassEffect::Configures(CompilerPass::Compiling))),
    FlagRule::new(FlagPattern::ExactlyWithGluedOrSep("-o"), ArgumentKind::Output),
    FlagRule::new(FlagPattern::ExactlyWithGluedOrSep("-p"), ArgumentKind::Other(PassEffect::Configures(CompilerPass::Preprocessing))),
    FlagRule::new(FlagPattern::ExactlyWithGluedOrSep("-Q"), ArgumentKind::Other(PassEffect::Configures(CompilerPass::Preprocessing))),
    FlagRule::new(FlagPattern::ExactlyWithGluedOrSep("-r"), ArgumentKind::Other(PassEffect::DriverOption)),
    FlagRule::new(FlagPattern::ExactlyWithGluedOrSep("-R"), ArgumentKind::Other(PassEffect::None)),
    FlagRule::new(FlagPattern::ExactlyWithGluedOrSep("-s"), ArgumentKind::Other(PassEffect::None)),
    FlagRule::new(FlagPattern::ExactlyWithGluedOrSep("-U"), ArgumentKind::Other(PassEffect::Configures(CompilerPass::Preprocessing))),
    FlagRule::new(FlagPattern::ExactlyWithGluedOrSep("-W"), ArgumentKind::Other(PassEffect::None)),
    FlagRule::new(FlagPattern::ExactlyWithGluedOrSep("-x"), ArgumentKind::Other(PassEffect::None)),
    FlagRule::new(FlagPattern::ExactlyWithGluedOrSep("-Y"), ArgumentKind::Other(PassEffect::None)),
    FlagRule::new(FlagPattern::Exactly("-c", 0), ArgumentKind::Other(PassEffect::StopsAt(CompilerPass::Compiling))),
    FlagRule::new(FlagPattern::Exactly("-E", 0), ArgumentKind::Other(PassEffect::StopsAt(CompilerPass::Preprocessing))),
    FlagRule::new(FlagPattern::Exactly("-F", 0), ArgumentKind::Other(PassEffect::None)),
    FlagRule::new(FlagPattern::Exactly("-g", 0), ArgumentKind::Other(PassEffect::Configures(CompilerPass::Compiling))),
    FlagRule::new(FlagPattern::Exactly("-S", 0), ArgumentKind::Other(PassEffect::StopsAt(CompilerPass::Assembling))),
    FlagRule::new(FlagPattern::Exactly("-T", 0), ArgumentKind::Other(PassEffect::DriverOption)),
    FlagRule::new(FlagPattern::Exactly("-v", 0), ArgumentKind::Other(PassEffect::DriverOption)),
    FlagRule::new(FlagPattern::Exactly("-V", 0), ArgumentKind::Other(PassEffect::InfoAndExit)),
];
static CRAY_FORTRAN_IGNORE_EXECUTABLES: [&str; 0] = [];
static CRAY_FORTRAN_IGNORE_FLAGS: [&str; 0] = [];
static CRAY_FORTRAN_SLASH_PREFIX: bool = false;
static CRAY_FORTRAN_ENV_RULES: [EnvRule; 0] = [
];
